<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tv_best"
            style="@style/ActionItem"
            android:layout_marginTop="8dp"
            android:text="@string/best"
            android:drawableLeft="@drawable/ic_best"
            android:drawablePadding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hot"
            style="@style/ActionItem"
            android:text="@string/hot"
            android:drawableLeft="@drawable/ic_hot"
            android:drawablePadding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_best" />

        <TextView
            android:id="@+id/tv_new"
            style="@style/ActionItem"
            android:text="@string/new_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableLeft="@drawable/ic_new"
            android:drawablePadding="3dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_hot" />

        <TextView
            android:id="@+id/tv_top"
            style="@style/ActionItem"
            android:text="@string/top"
            android:drawableLeft="@drawable/ic_top"
            android:drawablePadding="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>