<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="view"
            type="com.raahi.reddit.data.network.model.CommentData" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="48dp"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="3dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:id="@+id/iv_thumbnail"
                                        android:layout_width="32dp"
                                        android:layout_height="32dp"
                                        android:src="@drawable/ic_person" />

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="3dp"
                                        android:orientation="vertical">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@{`r/` + view.subReddit}"
                                            android:textColor="@color/colorBlack"
                                            android:textSize="14sp" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@{`Posted by u/` + view.author + ` . ` + view.createdDate+`h`}"
                                            android:textSize="12sp" />

                                    </LinearLayout>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginRight="3dp"
                                        android:layout_weight="1"
                                        android:text="@{view.title}"
                                        android:textColor="@color/colorBlack"
                                        android:textSize="22sp" />

                                    <ImageView
                                        android:id="@+id/image_view"
                                        android:layout_width="120dp"
                                        android:layout_height="120dp"
                                        android:scaleType="fitXY" />

                                </LinearLayout>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_comment_title"
                    android:layout_below="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTypeFilter"
                    android:drawableLeft="@drawable/ic_comment"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:drawableTint="@color/colorBlack"
                    android:padding="8dp"
                    android:text="@string/comments" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_comment_title"
                    android:layout_margin="8dp" />

                <LinearLayout
                    android:id="@+id/progress_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_comments"
                        android:textSize="@dimen/loading_comment_size"
                        android:textStyle="bold" />

                </LinearLayout>


            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <EditText
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:drawableRight="@drawable/ic_send"
            android:hint="@string/add_a_comment"
            android:drawablePadding="5dp"
            android:layout_gravity="bottom"
            android:drawableTint="@color/colorBlack"
            android:editable="false"
            android:onClick="launchCommentDialog"
            android:minHeight="48dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>